--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -3,7 +3,7 @@
 
 body {
   padding-top: 100px;
-  background: $bg-color;
+  background: image-url('1.jpg') fixed;
   font-family: 'Noto Sans', sans-serif;
 }
 
@@ -30,15 +30,16 @@ h1, h2, h3, h4, h5, h6 {
 
 .avatar {
   border: 1px solid $border-color;
-  width: 50px;
-  height: 50px;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
 }
 
 .cover {
   width: 100%;
   height: 400px;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
 }
 
