--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -3,8 +3,8 @@
 
 body {
   padding-top: 100px;
-  background: image-url('2.jpg') fixed;
   font-family: 'Noto Sans', sans-serif;
+  background: image-url('2.jpg') fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -14,6 +14,18 @@ h1, h2, h3, h4, h5, h6 {
 .navbar {
   border: none;
   background-color: $navbar-color;
+}
+
+.imagess {
+  background: image-url('2.jpg') fixed;
+  padding-top: 100px;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.imagesss {
+  background: image-url('1.jpg') fixed;
+  padding-top: 100px;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .navbar-brand {
