--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -4,7 +4,6 @@
 body {
   padding-top: 100px;
   font-family: 'Noto Sans', sans-serif;
-  background: image-url('2.jpg') fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -16,16 +15,12 @@ h1, h2, h3, h4, h5, h6 {
   background-color: $navbar-color;
 }
 
-.imagess {
+.boys-bg{
   background: image-url('2.jpg') fixed;
-  padding-top: 100px;
-  font-family: 'Noto Sans', sans-serif;
 }
 
-.imagesss {
+.girls-bg{
   background: image-url('1.jpg') fixed;
-  padding-top: 100px;
-  font-family: 'Noto Sans', sans-serif;
 }
 
 .navbar-brand {
