--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,23 +9,31 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
-    <%= render 'shared/navbar' %>
-    <%= debug(params) if Rails.env.development? %>
-    <% unless notice.blank? %>
-      <div class="alert alert-info alert-dismissable alert-fixed">
-        <%= notice %>
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <body class="
+  <% if @user.sex == "male" %> 
+    boys-bg 
+  <% end %>
+  <% if @user.sex == "female" %>
+    girls-bg
+  <% end %>
+  ">
+      <%= render 'shared/navbar' %>
+      <%= debug(params) if Rails.env.development? %>
+      <% unless notice.blank? %>
+        <div class="alert alert-info alert-dismissable alert-fixed">
+          <%= notice %>
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        </div>
+      <% end %>
+      <% unless alert.blank? %>
+        <div class="alert alert-danger alert-dismissable alert-fixed">
+          <%= alert %>
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        </div>
+      <% end %>
+      <div class="container">
+        <%= yield %>
       </div>
-    <% end %>
-    <% unless alert.blank? %>
-      <div class="alert alert-danger alert-dismissable alert-fixed">
-        <%= alert %>
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      </div>
-    <% end %>
-    <div class="container">
-      <%= yield %>
-    </div>
+    </body>
   </body>
 </html>
