--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,7 @@
     <div class="collapse navbar-collapse" id="navbar-top">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
+          <li><%= link_to "Home", root_url %></li>
           <li><%= link_to(current_user.name, user_path(current_user)) %></li>
           
           <li><%= link_to mailbox_inbox_path do  %>
