--- a/app/views/mailbox/_folders.html.erb
+++ b/app/views/mailbox/_folders.html.erb
@@ -3,21 +3,21 @@
     <%= link_to mailbox_inbox_path do  %>
         <span class="label label-danger pull-right"><%=unread_messages_count%></span>
         <em class="fa fa-inbox fa-lg"></em>
-        <span>Inbox</span>
+        <span>Μημύματα</span>
     <% end %>
   </li>
   <li class="<%= active_page(:sent) %>">
     <%= link_to mailbox_sent_path do %>
 
         <em class="fa fa-paper-plane-o fa-lg"></em>
-        <span>Sent</span>
+        <span>Απεσταλμένα</span>
     <% end %>
   </li>
 
   <li class="<%= active_page(:trash) %>">
     <%= link_to mailbox_trash_path do %>
         <em class="fa fa-trash-o fa-lg"></em>
-        <span>Trash</span>
+        <span>Διαγραμένα</span>
     <% end %>
   </li>
 </ul>
