--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-4 col-lg-offset-4 well">
-    <h3 class="text-center">Sign up</h3>
+    <h3 class="text-center">Εγγραφή</h3>
     <br>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <% if resource.errors.any? %>
@@ -10,37 +10,37 @@
         </div>
       <% end %>
       <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: 'form-control', autofocus: true, placeholder: 'Full name' %>
+        <%= f.label :"Ονομα/πώνυμο*" %>
+        <%= f.text_field :name, class: 'form-control', autofocus: true, placeholder: 'Ονομα/πώνυμο' %>
       </div>
 
       <div class="form-group">
-        <%= f.label :email %>
+        <%= f.label :"Email*" %>
         <%= f.email_field :email, class: 'form-control', placeholder: 'email@example.com' %>
       </div>
       <div class="form-group">
-        <%= f.label :password %>
+        <%= f.label :"Κωδικός*" %>
         <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br>
         <%= f.password_field :password, class: 'form-control', autocomplete: 'off', placeholder: 'password' %>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control', autocomplete: 'off', placeholder: 'password confirmation' %>
+        <%= f.label :"Επιβεβαίωση κωδικού*" %>
+        <%= f.password_field :password_confirmation, class: 'form-control', autocomplete: 'off', placeholder: 'Επιβεβαίωση κωδικού' %>
       </div>
 
       <div class="form-group">
-        <%= f.label :birthday %>
+        <%= f.label :"Γενέθλια" %>
         <%= f.date_field :birthday, max: Date.today-4080, min: Date.today-6870, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= f.label :gender %><br>
+        <%= f.label :"Φήλο*" %><br>
         <%= f.select :sex, options_for_seasons, class: 'form-control', prompt: 'Select One' %>
       </div>
       <div class="actions">
-        <%= f.submit 'Sign up', class: 'btn btn-success' %>
+        <%= f.submit 'Εγγραφή', class: 'btn btn-success' %>
       </div>
     <% end %>
     <br>
