--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,17 +1,25 @@
 <div class="info">
   <%= render 'shared/avatar', user: event.user %>
-  <h4 class="name"><%= event.user.name %></h4>
-  <span class="action">created an <%= link_to 'event', event %></span>
+  <h4 class="name"> <% if event.user.sex == "female" %>
+    Η 
+  <% else %>
+    Ο 
+  <% end %>
+  <%= event.user.name %></h4>
+  <span class="action">δημιούργησε μία <%= link_to 'εκδήλωση', event %></span>
 </div>
 <div class="content">
   <h3><%= event.name %></h3>
   <span class="text">
     <%= fa_icon'calendar' %> <%= formatted_time(event.when) %>
   </span>
+  <br><span class="text">
+    <%= fa_icon 'map-marker' %> <%= event.location %>
+  </span>
   <%= render 'shared/created_at', activity: event %>
   <div class="points">
-    <span class="like-count"><%= pluralize(event.cached_votes_up, 'like') %></span>
-    <span class="comment-count"><%= pluralize(event.comments_count, 'comment') %></span>
+    <span class="like-count"> Αρέσει σε <%= pluralize(event.cached_votes_up, '') %> άτομα</span>
+    <span class="comment-count"><%= pluralize(event.comments_count, '') %> Σχόλια</span>
     <div class="pull-right">
       <% if belongs_to_user?(event) %>
         <%= form_tag event_path(event), method: :delete, remote: remote do %>
