--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,13 +6,19 @@
   </div>
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3 well">
-      <h4>Comments</h4>
+      <h4>Σχόλια</h4>
       <hr>
       <%= render 'comments/form', commentable: @event %>
       <br>
-      <div class="comments">
-        <%= render(@comments) || render('shared/no_resource', resources: 'Comments') %>
-      </div>
+      <% if @comments.count<1 %>
+        <div class="comments">
+          <% render('shared/no_resource', resources: 'Comments') %>
+        </div>
+      <% else %>
+        <div class="comments">
+          <%= render(@comments) %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
