--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-12">
     <div class="form-group">
       <!-- we'll configure this to compose new conversations later -->
-      <%= link_to "Compose", new_conversation_path, class: "btn btn-success" %>
+      <%= link_to "Δημιούργησε", new_conversation_path, class: "btn btn-success" %>
     </div>
   <div class="spacer"></div>
   </div>
