--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="well">
   <%= form_for(@post) do |f| %>
     <div class="form-group">
-      <h4>Update Status</h4>
-      <%= f.text_area :content, class: 'form-control', autofocus: true, placeholder: 'What\'s up?' %>
+      <h4>Ενημέρωσε τον τοίχο σου</h4>
+      <%= f.text_area :content, class: 'form-control', autofocus: true, placeholder: 'Τι νέο...' %>
     </div>
     <div id="img-preview" class="form-group hidden">
       <img src="" alt="Preview">
@@ -14,7 +14,7 @@
       <a id="post-attachment" href="javascript:void(0);" class="pull-right btn btn-primary">
         <%= fa_icon 'image' %>
       </a>
-      <%= f.submit 'Post', class: 'btn btn-primary'%>
+      <%= f.submit 'Δημοσίευσε', class: 'btn btn-primary'%>
     </div>
   <% end %>
 </div>
