--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,11 @@
 <div class="info">
   <%= render 'shared/avatar', user: post.user %>
-  <h4 class="name"><%= post.user.name %></h4>
-  <span class="action">created a <%= link_to 'post', post %></span>
+  <h4 class="name"><% if post.user.sex == "female" %>
+    Η 
+  <% else %>
+    Ο <%= post.user.name %>
+  <% end %></h4>
+  <span class="action">δυμιούσγησε μία <%= link_to 'δημοσίευση', post %></span>
 </div>
 <div class="content">
   <span class="text"><p><%= post.content %></p></span>
@@ -12,8 +16,8 @@
   <% end %>
   <%= render 'shared/created_at', activity: post %>
   <div class="points">
-    <span class="like-count"><%= pluralize(post.cached_votes_up, 'like') %></span>
-    <span class="comments-count"><%= pluralize(post.comments_count, 'comment') %></span>
+    <span class="like-count"> Αρέσει σε <%= pluralize(post.cached_votes_up, '') %> άτομα</span>
+    <span class="comments-count"><%= pluralize(post.comments_count, '') %> Σχόλια</span>
     <div class="pull-right">
       <% if belongs_to_user?(post) %>
         <%= link_to edit_post_path(post), class: 'btn btn-primary btn-sm' do %>
