--- a/app/views/public_activity/comment/_create.html.erb
+++ b/app/views/public_activity/comment/_create.html.erb
@@ -2,8 +2,13 @@
  	<div class="activity-comment">
  	  <div class="info">
      	<%= render 'shared/avatar', user: activity.owner %>
- 	    <h4 class="name"><%= activity.owner.name %></h4>
- 	    <span class="action">commented on a <%= link_to 'post', activity.trackable.commentable %></span>
+ 	    <h4 class="name">
+ 	    <% if activity.owner.sex == "female" %>
+    		Η 
+    	<% else %>
+ 	      Ο <%= activity.owner.name %>
+ 	    <% end %></h4>
+ 	    <span class="action">σχολίασε μία <%= link_to 'δημοσίευση', activity.trackable.commentable %></span>
  	  </div>
  	  <div class="content">
  	    <h4><small><%= activity.trackable.comment %></small></h4>
