--- a/app/views/public_activity/follow/_create.html.erb
+++ b/app/views/public_activity/follow/_create.html.erb
@@ -1,8 +1,16 @@
 <div class="activity-follow">
   <div class="follower">
     <%= render 'shared/avatar', user: activity.owner %>
-    <h4 class="name"><%= activity.owner.name %></h4>
-    <span class="action">Followed </span>
+    <h4 class="name"><% if activity.owner.sex == "female" %>
+      Η 
+    <% else %>
+      Ο <%= activity.owner.name %>
+    <% end %></h4>
+    <span class="action">ακολούθησε <% if activity.trackable.followable.sex == "female" %>
+      την 
+    <% else %>
+      τον <%= activity.trackable.followable.name %>
+    <% end %></span>
   </div>
   <div class="followee">
     <%= render 'shared/avatar', user: activity.trackable.followable %>
