--- a/app/views/public_activity/post/_like.html.erb
+++ b/app/views/public_activity/post/_like.html.erb
@@ -2,8 +2,12 @@
   <div class="activity-like">
     <div class="info">
       <%= render 'shared/avatar', user: activity.owner %>
-      <h4 class="name"><%= activity.owner.name %></h4>
-      <span class="action">liked a <%= link_to 'post', activity.trackable %></span>
+      <h4 class="name"><% if activity.owner.sex == "female" %>
+        Η 
+      <% else %>
+        Ο <%= activity.owner.name %>
+      <% end %></h4>
+      <span class="action">αρέσει μία <%= link_to 'δημοσίευση', activity.trackable %></span>
     </div>
     <div class="content">
       <h4><small><%= activity.trackable.content %></small></h4>
