--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -1,30 +1,26 @@
 <div id="links" class="well">
   <h5>
-    <%= fa_icon 'newspaper-o' %>
-    <%= link_to 'NewsFeed', root_path %>
-  </h5>
-  <h5>
     <%= fa_icon 'calendar-o' %>
-    <%= link_to 'Create Event', new_event_path %>
+    <%= link_to 'Δυμιουργία εκδήλωσης', new_event_path %>
   </h5>
   <h5>
     <%= fa_icon 'arrow-circle-right' %>
-    <%= link_to 'Ποιοι με ακολουθούν', friends_user_path(current_user) %>
+    <%= link_to 'Φίλοι', friends_user_path(current_user) %>
   </h5>
   <h5>
     <%= fa_icon 'arrow-circle-left' %>
-    <%= link_to 'Ποιους ακολουθώ', followers_user_path(current_user) %>
+    <%= link_to 'Ακόλουθοι', followers_user_path(current_user) %>
   </h5>
   <h5>
     <%= fa_icon 'search' %>
-    <%= link_to('Find Friends', find_friends_path)%>
+    <%= link_to('Βρες φίλους', find_friends_path)%>
   </h5>
   <h5>
     <%= fa_icon 'pencil' %>
-    <%= link_to 'Edit Profile', edit_user_path(current_user) %>
+    <%= link_to 'Επεξεργασία προφίλ', edit_user_path(current_user) %>
   </h5>
   <h5>
     <%= fa_icon 'lock' %>
-    <%= link_to 'Change password', edit_user_registration_path %>
+    <%= link_to 'Αλλαγή κωδικού', edit_user_registration_path %>
   </h5>
 </div>
