--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbar-top">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to "Home", root_url %></li>
+          <li><%= link_to "Αρχική", root_url %></li>
           <li><%= link_to(current_user.name, user_path(current_user)) %></li>
           
           <li><%= link_to mailbox_inbox_path do  %>
@@ -22,15 +22,14 @@
               </span>
             <% end %>
               <em class="fa fa-inbox fa-lg"></em>
-              <span>Inbox</span>
+              <span>Μηνύματα</span>
             <% end %>
           </li>
 
-          <li><%= link_to('Sign out', destroy_user_session_path, method: :delete) %></li>
+          <li><%= link_to('Αποσύνδεση', destroy_user_session_path, method: :delete) %></li>
         <% else %>
-          <li><%= link_to 'About', about_path %></li>
-          <li><%= link_to 'Sign up', new_user_registration_path %></li>
-          <li><%= link_to 'Sign in', user_session_path %></li>
+          <li><%= link_to 'Εγγραφή', new_user_registration_path %></li>
+          <li><%= link_to 'Σύνδεση', user_session_path %></li>
         <% end %>
       </ul>
     </div>
