--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-lg-6 col-lg-offset-3">
     <div class="well">
-      <h3>Edit Profile</h3>
+      <h3>Επεξεργασία προφίλ</h3>
       <%= form_for @user do |f| %>
         <div class="form-group">
-          <%= f.label :avatar %>
+          <%= f.label :"Εικόνα προφίλ" %>
           <br>
           <%= render 'shared/avatar', user: @user %>
           <br>
@@ -12,38 +12,38 @@
           <%= f.file_field :avatar %>
         </div>
         <div class="form-group">
-          <%= f.label :cover %>
+          <%= f.label :"Εξώφυλλο" %>
           <br>
           <%= render 'shared/cover', user: @user %>
           <br>
           <%= f.file_field :cover %>
         </div>
         <div class="form-group">
-          <%= f.label :name %>
-          <%= f.text_field :name, placeholder: 'Full Name', class: 'form-control' %>
+          <%= f.label :"Ονομα/πώνυμο" %>
+          <%= f.text_field :name, placeholder: 'Ονομα/πώνυμο', class: 'form-control' %>
         </div>
         
         <div class="form-group">
-          <%= f.label :location %>
-          <%= f.text_field :location, placeholder: 'Location', class: 'form-control' %>
+          <%= f.label :"Τοποθεσία" %>
+          <%= f.text_field :location, placeholder: 'π.Χ. Πτολεμαΐδα', class: 'form-control' %>
         </div>
         
         <div class="form-group">
-          <%= f.label :school %><br>
+          <%= f.label :"Σχολείο" %><br>
           <%= f.select :school, noptions_for_seasons, class: 'form-control', prompt: 'Select One' %>
         </div>
 
         <div class="form-group">
-          <%= f.label :birthday %>
+          <%= f.label :"Γεννέθλια" %>
           <%= f.date_field :birthday, max: Date.today-4745, min: Date.today-6870, class: 'form-control' %>
         </div>
     
         <div class="form-group">
-          <%= f.label :gender %><br>
+          <%= f.label :"Φήλο" %><br>
           <%= f.select :sex, options_for_seasons, class: 'form-control', prompt: 'Select One' %>
         </div>
         <div class="actions">
-          <%= submit_tag 'Update', class: 'btn btn-primary' %>
+          <%= submit_tag 'Ενημέρωση', class: 'btn btn-primary' %>
         </div>
       <% end %>
 
