--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,11 +20,11 @@
     <% if is_current_user?(@user) %>
       <div class="well">
         <ul class="nav nav-pills nav-stacked">
-          <li><%= link_to 'Edit Profile', edit_user_path(@user) %></li>
-          <li><%= link_to 'Change password', edit_user_registration_path %></li>
-          <li><%= link_to 'Friends', friends_user_path(@user) %></li>
-          <li><%= link_to 'Followers', followers_user_path(@user) %></li>
-          <li><%= link_to 'Deactivate', deactivate_user_path(@user) %></li>
+          <li><%= link_to 'Επεξεργασία προφίλ', edit_user_path(@user) %></li>
+          <li><%= link_to 'Αλλαγή κωδικού', edit_user_registration_path %></li>
+          <li><%= link_to 'Φίλοι', friends_user_path(@user) %></li>
+          <li><%= link_to 'Ακόλουθοι', followers_user_path(@user) %></li>
+          <li><%= link_to 'Απανεργοποίηση', deactivate_user_path(@user) %></li>
         </ul>
       </div>
     <% end %>
