--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
         </div>
       <% end %>
       <div class="form-group">
-        <%= f.label :"Ονομα/πώνυμο*" %>
+        <%= f.label :"Όνομ/μο*" %>
         <%= f.text_field :name, class: 'form-control', autofocus: true, placeholder: 'Ονομα/πώνυμο' %>
       </div>
 
@@ -36,7 +36,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :"Φήλο*" %><br>
+        <%= f.label :"Φύλο*" %><br>
         <%= f.select :sex, options_for_seasons, class: 'form-control', prompt: 'Select One' %>
       </div>
       <div class="actions">
