grammatiki sintaksi eginan merikes allages akoma

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
         </div>
       <% end %>
       <div class="form-group">
-        <%= f.label :"Όνομ/μο*" %>
+        <%= f.label :"Ονομ/μο*" %>
         <%= f.text_field :name, class: 'form-control', autofocus: true, placeholder: 'Ονομα/πώνυμο' %>
       </div>
 
