--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,7 @@
   <% else %>
     Ο <%= post.user.name %>
   <% end %></h4>
-  <span class="action">δυμιούργησε μια <%= link_to 'δημοσίευση', post %></span>
+  <span class="action">δημιούργησε μια <%= link_to 'δημοσίευση', post %></span>
 </div>
 <div class="content">
   <span class="text"><p><%= post.content %></p></span>
