--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3 well">
-      <h4>Comments</h4>
+      <h4>Σχόλια</h4>
       <hr>
       <%= render 'comments/form', commentable: @post %>
       <br>
