--- a/app/views/shared/_created_at.html.erb
+++ b/app/views/shared/_created_at.html.erb
@@ -1,4 +1,4 @@
-<div class="created-at">
+<!-- <div class="created-at">
   <%= fa_icon 'clock-o' %>
   <%= relative_time(activity.created_at) %> πριν
-</div>
+</div> -->
