--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
 
       <div class="form-group">
         <%= f.label :"Γενέθλια" %>
-        <%= f.date_field :birthday, max: Date.today-4080, min: Date.today-6870, class: 'form-control' %>
+        <%= f.date_field :birthday, max: Date.today-4080, min: Date.today-6870,, placeholder: 'π.χ. 01/02/2001' class: 'form-control' %>
       </div>
 
       <div class="form-group">
